--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/types_plantes/
+    - assets/images/arbres/
+    - assets/images/arbustes/
+    - assets/images/fleurs/
+    - assets/images/herbes/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
